Fix wrong colors used for blank page on themes other than Eclipse purple

--- a/browser/base/content/blanktab.css
+++ b/browser/base/content/blanktab.css
@@ -2,6 +2,8 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
-body {
-  background-color: light-dark(rgb(229, 227, 234), rgb(11, 10, 13)) !important;
+@media -moz-pref("r3dfox.colors", 4) {
+  body {
+    background-color: light-dark(rgb(229, 227, 234), rgb(11, 10, 13)) !important;
+  }
 }
